2007-05-07  Vincent Untz  <vuntz@gnome.org>

	* panel-run-dialog.c: fix alignment of the run button again, and use
	markup for the label in there

2007-05-01  Vincent Untz  <vuntz@gnome.org>

	* panel-ditem-editor.c: use Location instead of File for the combo box
	Fix bug #394595

2007-05-01  Vincent Untz  <vuntz@gnome.org>

	* panel-applet-frame.c: (panel_applet_frame_cnx_broken): default the
	dialog response to "reload"
	(panel_applet_frame_loading_failed): default the response to "don't
	delete"
	Fix bug #345156

2007-05-01  Vincent Untz  <vuntz@gnome.org>

	* panel-shell.c: (panel_shell_register_error_dialog): new, show the
	error dialog with a checkbox to let the user force the panel to not
	be restarted by gnome-session
	(panel_shell_register): force the panel to not be restarted if there's
	already one running and don't show an error dialog in this case
	* panel-session.[ch]: (panel_session_do_not_restart): new, to tell the
	session manager to not restart the panel
	Fix bug #309539

2007-04-30  Vincent Untz  <vuntz@gnome.org>

	* panel-util.[ch]: (missing_pixbuf): unused => kill
	* menu.c: remove useless include
	(menus_have_icons_changed): remove useless code

==================== 2.18.1 ====================

2007-04-10  Vincent Untz  <vuntz@gnome.org>

	* panel-util.c: (panel_lock_screen_action_get_command): if EUID is 0,
	return NULL if the user wants to lock the screen: gnome-screensaver
	and xscreensaver don't support root locking the screen.
	Fix bug #424545.

2007-04-10  Vincent Untz  <vuntz@gnome.org>

	* panel-run-dialog.c: (panel_run_dialog_destroy): call
	panel_run_dialog_disconnect_pixmap()
	(panel_run_dialog_disconnect_pixmap): new function, to disconnect
	signals
	Fix bug happening because we get a screen_changed signal when the
	widget is destroyed and the data read in the handler has already been
	freed.
	Fix bug #413921. Patch by Ray Strode <rstrode@redhat.com>

2007-04-10  Vincent Untz  <vuntz@gnome.org>
